test/errors/def_annotations.py
def foo(x, /: int, z): pass
